# ghosttype-mcp

./: .gitignore  LICENSE  README.md  clawtap_mcp.py  ghosttype_mcp.py  pyproject.toml  requirements.txt
firmware/esp32-ble-receiver/: esp32-ble-receiver.ino
firmware/rp2040-hid-keyboard/: rp2040-hid-keyboard.ino
