[project]
name = "clawtap-mcp"
version = "1.0.0"
description = "BLE-to-USB HID wireless keyboard bridge as MCP server (formerly ghosttype-mcp)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "bleak>=0.21.0",
]

[project.scripts]
clawtap-mcp = "clawtap_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
